This is the website. Changed to content about banana

--- a/Home.html
+++ b/Home.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<!--This is a website about cows-->
+<!--This is a website about bananas-->
 <html>
-    <head><title>Cows</title></head>
+    <head><title>Bananas</title></head>
     <body>
-        <h1>Site about cows</h1>
-        <p>img</p>
+        <main>
+        <h1>Bananas</h1>
+        <h2>Index</h2>
+        <ol>
+            <li><a href ="#whatarebananas-header">What are bananas?</a></li>
+            <li><a href ="#listofthings-header">List of things you can make with them</a></li>
+        </ol>
+        <img src = "banana-image.jpg" alt = "image of banana">
+        <img src = "banana-image.jpg" alt = "image of banana">
+        
+        <h2 id = "whatarebananas-header">What are Bananas?</h2>
+        <p>They are pretty cool fruits</p>
+        <h2 id = "listofthings-header">List of things you can make with them:</h2>
+            <ul>
+                <li>Banana bread</li>
+                <li>Banana sundae</li>
+                <li>Banana muffin</li>
+            </ul>
+        </main>
     </body>
 </html>
