Added form elements

--- a/Home.html
+++ b/Home.html
@@ -21,6 +21,15 @@
                 <li>Banana sundae</li>
                 <li>Banana muffin</li>
             </ul>
+        <form action ="Data.html">
+            <label for = "yes">
+                <input type = "radio" name = "yes-no" required>Yes
+            </label>
+            <label for = "no">
+                <input type = "radio" name = "yes-no" required>No
+            </label>
+            <button type = "submit">Submit</button>
+        </form>
         </main>
     </body>
 </html>
