--- a/Home.html
+++ b/Home.html
@@ -19,6 +19,7 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
+            display: block;
         }
 
         h1{
@@ -34,13 +35,13 @@
 
         body{
             font-family: sans-serif;
-            background-color: lightyellow;
+            background: linear-gradient(90deg, yellow, lightgreen);
             
         }
 
         #index-color{
             background-color: orange;    
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0,0,0,0.23)
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0,0,0,0.23);
         }
 
         #info-color{
@@ -59,7 +60,7 @@
         }
 
         .styling-divisions{
-            margin: 30px 40px 30px 40px;
+            margin: 40px 40px 30px 40px;
             padding: 20px;
         }
 
@@ -67,12 +68,35 @@
             text-align: center;
         }
 
+        a{
+            color: black;
+        }
+        a:hover{
+            color:blue;
+        }
+
+        nav li{
+            display: inline;
+            margin-right: 20px;
+        }
+        nav ul{
+            margin: 0px;
+            padding: 5px 0px 5px 30px;
+        }
 
     </style>
     <head><title>Bananas</title></head>
     <body>
         <main>
-        <h1>Bananas</h1>
+        <header>
+            <h1>Bananas</h1>
+            <nav id = "navbar">
+                <ul>
+                    <li><a href = "#">Home</a></li>
+                    <li><a href = "#">More info</a></li>
+                </ul>
+            </nav>
+        </header>
         <div id = "index-color" class = "styling-divisions">
         <h2><u>Index</u></h2>
         <ol>
